# PostfijaREX

./: .gitignore  CMakeLists.txt  README.rst
graphics/: Design_GUI.psd  Design_GUI_Evaluar.psd  Manifest.manifest  Resources.rc
include/: Algoritmo_Postfija.h  Pantalla_Principal.h
pruebas/: Algoritmo_Postfija.cpp  notación_postfija.cpp  validaciones.cpp
sources/: Algoritmo_Postfija.cpp  Main.cpp  Pantalla_Principal.cpp
